--- a/BlackJack_v1.1(mobile)/BlackJack.css
+++ b/BlackJack_v1.1(mobile)/BlackJack.css
@@ -36,7 +36,7 @@ body{
 }
 
 button{
-	font-family: foldeck;
+	/*font-family: foldeck;*/
 	color: white;	
 	background-color: #101060;
 	border-color: #101060;
@@ -46,7 +46,7 @@ button{
 	display: block;
 	height: 40px;
 	width: 80px;
-	font-size: 25px;	
+	font-size: 20px;	
 	color: white;	
 	border-radius: 10px;
 }
@@ -109,7 +109,7 @@ button{
 	width: 80px;	
 	text-align: center;
 	margin-top: 2%;
-	font-family: foldeck;
+	/*font-family: foldeck;*/
 	font-size: 25px;
 	/*border: 1px solid;*/
 }
@@ -209,6 +209,42 @@ button{
 	/*border-color: #1C86EE;
 	background: linear-gradient(#1C86EE, #00BFFF, #1C86EE);*/
 	border-radius: 10px;
+}
+
+#hide_layer{
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	background-color: rgba(0,0,0,0.3);
+	display: none;
+}
+
+.pop_window{
+	width: 300px;
+	height: 200px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -150px;
+	margin-top: -100px;
+	background: linear-gradient(#fff, #6a9bc4);
+	border: 2px solid #000;
+	border-radius: 5px;
+	box-shadow: -2px 2px 2px #333;
+	/*font-weight: bold;*/
+	text-align: center;
+}
+
+.pop_window p{
+	margin-top: 30px;
+}
+
+.pop_btn{
+	font-size: 1em;
+	width: 4em;
+	height: 1.5em;	
+	margin-top: 50px;
+	margin-left: 20px;
 }
 
 
