--- a/BlackJack_v1.1(mobile)/BlackJackLandscape.css
+++ b/BlackJack_v1.1(mobile)/BlackJackLandscape.css
@@ -26,15 +26,15 @@ body{
 }
 
 .home{
-	height: 10%;
-	width: 15%;
+	height: 2em;
+	width: 3em;
 	position: absolute;
 	left: 2%;
 	top: 10%;	
 }
 
 button{
-	font-family: foldeck;
+	/*font-family: foldeck;*/
 	color: white;	
 	background-color: #101060;
 	border-color: #ffffff;
@@ -44,7 +44,7 @@ button{
 	display: block;
 	height: 100%;
 	width: 100%;
-	font-size: 25px;	
+	font-size: 0.8em;	
 	color: white;	
 	border-radius: 10px;
 }
@@ -103,7 +103,7 @@ button{
 	width: 10%;	
 	text-align: center;
 	/*margin-top: 2%;*/
-	font-family: foldeck;
+	/*font-family: foldeck;*/
 	font-size: 1em;
 	/*border: 1px solid;*/
 }
@@ -159,8 +159,8 @@ button{
 
 .raise button{
 	height: 40%;
-	width: 90%;
-	font-size: 1em;
+	width: 60%;
+	font-size: 0.8em;
 	border-radius: 50%;
 	/*margin-top: 10px;*/
 }
@@ -178,12 +178,13 @@ button{
 	/*float: left;*/
 	height: 50%;
 	width: 100%;
-	font-size: 1em;
+	font-size: 0.8em;
 	text-align: center;
 	margin-top: 2%;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 50%;
+	/*display: none;*/
 }
 
 .deal{
@@ -206,4 +207,38 @@ button{
 	border-radius: 50%;
 }
 
+#hide_layer{
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	background-color: rgba(0,0,0,0.3);
+	display: none;
+}
 
+.pop_window{
+	width: 300px;
+	height: 200px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -150px;
+	margin-top: -100px;
+	background: linear-gradient(#fff, #6a9bc4);
+	border: 2px solid #000;
+	border-radius: 5px;
+	box-shadow: -2px 2px 2px #333;
+	/*font-weight: bold;*/
+	text-align: center;
+}
+
+.pop_window p{
+	margin-top: 30px;
+}
+
+.pop_btn{
+	font-size: 1em;
+	width: 4em;
+	height: 1.5em;	
+	margin-top: 50px;
+	margin-left: 20px;
+}
