--- a/BlackJack_v1.1(mobile)/BlackJackLandscape.css
+++ b/BlackJack_v1.1(mobile)/BlackJackLandscape.css
@@ -171,7 +171,7 @@ button{
 	position: absolute;		
 	right: 3%;
 	bottom: 30%;	
-	/*border: 1px solid;*/
+	
 }
 
 .player_btn button{
@@ -184,7 +184,7 @@ button{
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 50%;
-	/*display: none;*/
+	display: none;
 }
 
 .deal{
